# static_power_analysis

./: README.md  pyproject.toml
static_power_analysis/: 01_power_analysis_example.ipynb
