[tool.poetry]
name = "static-power-analysis"
version = "0.1.0"
description = ""
authors = ["Rodrigo Franco <rodrigo.franco.09@gmail.com>"]
readme = "README.md"
packages = [{include = "static_power_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
